Fix primary style on mobile homepage buttons

--- a/app/javascript/components/Homepage.css
+++ b/app/javascript/components/Homepage.css
@@ -47,7 +47,7 @@
   display: none;
 }
 
-@media only screen and (min-device-width: 0) and (max-device-width: 500px), (max-width: 500px) {
+@media only screen and (min-device-width: 0) and (max-device-width: 800px), (max-width: 500px) {
   .homepageSubtitle {
     font-size: 18px;
   }
